# drink-dispenser-ui

./: CMakeLists.txt  DrinkDispenserUI.pro  README.md  main.cpp  qml.qrc
Controllers/: systemcontroller.cpp  systemcontroller.h
UI/: DispensingScreen.qml  DrinkSizePage.qml  DrinkTypePage.qml  FinishScreen.qml  HotColdSelectionScreen.qml  StatusBar.qml  main.qml
